--- a/simplebank/app.env
+++ b/simplebank/app.env
@@ -1,3 +1,3 @@
-DB_DRIVER="postgres"
-DB_SOURCE="POSTGRESQL://ROOT:SECRET@LOCALHOST:5432/SIMPLE_BANK?SSLMODe=disable"
-HTTP_SERVER_ADDRESS="0.0.0.0:8081"
+DB_DRIVER=postgres
+DB_SOURCE=postgresql://root:secret@localhost:5432/simple_bank?sslmode=disable
+HTTP_SERVER_ADDRESS=0.0.0.0:8080
