--- a/simplebank/Makefile
+++ b/simplebank/Makefile
@@ -36,4 +36,9 @@ server:
 mock:
 	mockgen --build_flags=--mod=mod -destination db/mock/store.go simplebank/db/sqlc Store  
 
-.PHONY: startdb stopdb migrateup migrateup1 migratedown migratedown1 sqlc test server mock new_migration db_schema
+proto:
+	protoc --proto_path=proto --go_out=pb --go_opt=paths=source_relative \
+    --go-grpc_out=pb --go-grpc_opt=paths=source_relative \
+    proto/*.proto
+
+.PHONY: startdb stopdb migrateup migrateup1 migratedown migratedown1 sqlc test server mock new_migration db_schema proto
