--- a/simplebank/Makefile
+++ b/simplebank/Makefile
@@ -39,6 +39,10 @@ mock:
 proto:
 	protoc --proto_path=proto --go_out=pb --go_opt=paths=source_relative \
     --go-grpc_out=pb --go-grpc_opt=paths=source_relative \
+	--grpc-gateway_out=pb  --grpc-gateway_opt=paths=source_relative \
     proto/*.proto
 
-.PHONY: startdb stopdb migrateup migrateup1 migratedown migratedown1 sqlc test server mock new_migration db_schema proto
+evans:
+	evans --host localhost --port 9090 -r repl
+
+.PHONY: startdb stopdb migrateup migrateup1 migratedown migratedown1 sqlc test server mock new_migration db_schema proto evans
