--- a/simplebank/docker-compose.yml
+++ b/simplebank/docker-compose.yml
@@ -12,3 +12,8 @@ services:
     restart: always
     volumes:
       - ./db-data/postgres/:/var/lib/postgresql/data/
+  redis:
+    image: "redis:7-alpine"
+    ports:
+      - "6379:6379"
+    restart: always
