--- a/simplebank/docker-compose.yml
+++ b/simplebank/docker-compose.yml
@@ -17,6 +17,21 @@ services:
     ports:
       - "6379:6379"
     restart: always
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+      - "9090:9090"
+    environment:
+      - DB_SOURCE=postgresql://root:secret@postgres:5432/simple_bank?sslmode=disable
+      - REDIS_ADDRESS=redis:6379
+    depends_on:
+      - postgres
+      - redis
+    entrypoint: ["/app/wait-for.sh", "postgres:5432", "--", "/app/start.sh"]
+    command: ["/app/main"]
   mailpit:
     image: axllent/mailpit
     container_name: mailpit
@@ -31,3 +46,5 @@ services:
       MP_DATABASE: /data/mailpit.db
       MP_SMTP_AUTH_ACCEPT_ANY: 1
       MP_SMTP_AUTH_ALLOW_INSECURE: 1
+volumes:
+  data-volumn:
